solve background not showing problem

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 body{
-    @apply bg-backblue-100 bg-[url('./images/pattern-background-mobile.svg')] sm:bg-[url('./images/pattern-background-desktop.svg')] font-redhat
+    @apply bg-backblue-100 bg-[url('/frontendmentor.io-Order-summary-card-solution/images/pattern-background-mobile.svg')] sm:bg-[url('/frontendmentor.io-Order-summary-card-solution/images/pattern-background-desktop.svg')] font-redhat
 }
 .card{
     @apply flex  rounded-2xl shadow-xl bg-backblue-300 flex-col gap-5 w-80
